# binance-market-data-ingestion

./: Cargo.toml  README.md
src/: depth.rs  main.rs  trade.rs
